samples/_failures_safe/1761187471_2ac31a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da61653b.c: In function ‘main’:
./samples/SAFE/__tmp_da61653b.c:158:17: error: expected expression at end of input
  158 |                 } else if (status == 0)
      |                 ^
./samples/SAFE/__tmp_da61653b.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da61653b.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da61653b.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_da61653b.c:158:17: error: expected declaration or statement at end of input
